added CSS not complete

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- 1. Header Section: Logo, Navigation, Hero Text, Hero Image -->
     <header>
         <div class="navbar">
-            <img src="logo.png" alt="Header Logo">
+            <img src="/images/logo.jpg" alt="Header Logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
@@ -28,7 +28,6 @@
         </div>
     </header>
 
-    <!-- 2. Info Section: 4 Images with Text Below -->
     <section class="info">
         <h1>Some Random Information.</h1>
         <p>This is a simple landing page example to demonstrate HTML structure and styling.</p>
@@ -52,12 +51,10 @@
         </div>
     </section>
 
-    <!-- 3. Quote Section -->
     <section class="quote">
         <p>"The wise man does at once what the fool does finally." – <strong>Niccolò Machiavelli, The Prince</strong></p>
     </section>
 
-    <!-- 4. Signup Section -->
     <section class="signup">
         <h2>Sign Up for Service Updates</h2>
         <form action="#" method="post">
@@ -66,7 +63,6 @@
         </form>
     </section>
 
-    <!-- 5. Footer Section -->
     <footer>
         <p>&copy; 2025 Space. All rights reserved.</p>
     </footer>
