done the project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="https://www.theodinproject.com/" class="cta-button">Get Started</a>
             </div>
             <div class="hero-image">
-                <img src="hero-image.jpg" alt="Hero Image">
+                <img src="https://i.redd.it/nah-id-win-v0-epcjymbbd3hc1.jpg?width=3000&format=pjpg&auto=webp&s=9d06e708117664dccbf05f13d258938b81328520" alt="Hero Image">
             </div>
         </div>
     </header>
@@ -33,20 +33,20 @@
         <p>This is a simple landing page example to demonstrate HTML structure and styling.</p>
         <div class="info-boxes">
             <div class="info-box">
-                <img src="image1.jpg" alt="Content goes here">
-                <p>Content goes here</p>
+            <img src="https://www.planetware.com/wpimages/2020/01/india-in-pictures-beautiful-places-to-photograph-taj-mahal.jpg" alt="first picture">
+            <p>The Taj Mahal changes color depending on the time of day due to the sun's reflection on its marble.</p>
             </div>
             <div class="info-box">
-                <img src="image2.jpg" alt="More content here">
-                <p>More content here</p>
+            <img src="https://media.istockphoto.com/id/825383494/photo/business-man-pushing-large-stone-up-to-hill-business-heavy-tasks-and-problems-concept.jpg?s=612x612&w=0&k=20&c=wtqvbQ6OIHitRVDPTtoT_1HKUAOgyqa7YzzTMXqGRaQ=" alt="second picture">
+            <p>The myth of Sisyphus, who eternally pushes a boulder uphill, symbolizes perseverance against impossible odds.</p>
             </div>
             <div class="info-box">
-                <img src="image3.jpg" alt="Even more content here">
-                <p>Even more content here</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSf_CFqiEUjF9E32JevU_JMg0yxjhFQtvb19A&s" alt="third picture ">
+            <p>Honey never spoils; archaeologists have found edible honey in ancient Egyptian tombs thousands of years old.</p>
             </div>
             <div class="info-box">
-                <img src="image4.jpg" alt="Final content box">
-                <p>Final content box</p>
+            <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=400&q=80" alt="Final content box">
+            <p>There are more stars in the universe than grains of sand on all the beaches on Earth.</p>
             </div>
         </div>
     </section>
@@ -56,11 +56,16 @@
     </section>
 
     <section class="signup">
-        <h2>Sign Up for Service Updates</h2>
-        <form action="#" method="post">
-            <input type="email" name="email" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
-        </form>
+        <div class="signup-container">
+            <div class="signup-text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-form">
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit">Sign up</button>
+            </div>
+        </div>
     </section>
 
     <footer>
