changed some links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="/images/logo.jpg" alt="Header Logo">
+            <img src="https://images.seeklogo.com/logo-png/61/1/one-piece-skull-logo-png_seeklogo-613212.png" alt="Header Logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
